tests/cases/functions/ok/function-generic-surface.ari
fn identity[T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  return 0;
}
