tests/cases/functions/errors/function-main-params.ari
fn main(value: i64) -> i64 {
  return value;
}
